# Snippets

Batch/: AUTOEXEC.BAT
Boost/: build_boost_readme.txt
CMake/: CMakeLists.txt
CSharp/ListSpecialFolder/: Program.cs
CSharp/Path/: Path.cs  PathTest.cs
Cpp/CheckProjectFile/: main.cpp
Cpp/CountFileTypes/: CountFileTypes.cpp
Cpp/LoggingServerQt/src/: Controller.cpp  ControllerWidget.cpp  ControllerWidget.hpp  Icons.cpp  Icons.hpp  Icons.qrc  LoggingServer.cpp  MainWidget.cpp  Settings.hpp  SettingsWidget.hpp  TcpIpEdit.cpp  TcpIpEndPoint.cpp  Utils.hpp  main.cpp  src.pro
Cpp/LoggingServerQt/test/: LoggingServerTest.cpp  test.pro
Cpp/MiniBrowser/: MainWindow.cpp  main.cpp
Eclipse/: LunaPreferences.epf
Java/: cleanProjectFiles.bat
Java/JCheckPath/: CheckPath.java
Java/backup_files/: Backup.java  FileBackuper.java  Upload.java
Java/check_projectfiles/: ProjectFileChecker.java  Settings.java
Java/delete_old_files/: DeleteOldFiles.java  OldFileDeleter.java
LoggingServerQt/: CMakeLists.txt  LoggingServerQt.pro
LoggingServerQt/src/: Controller.hpp  LoggingServer.hpp  MainWidget.hpp  Settings.cpp  SettingsWidget.cpp  TcpIpEdit.hpp  TcpIpEndPoint.hpp  Utils.cpp
MiniBrowser/: MainWindow.hpp  main.cpp
QtCreator/styles/: peter_most_style.xml
Vim/: _vimrc
Vim/vimfiles/after/colors/: peter_most_minimal.vim
Vim/vimfiles/after/syntax/: c.vim
msys2/: msys2-qt-installation.odt
vlc/: playlist5.xspf
